istio/ib-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ib-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ib
spec:
  hosts:
  - "*"
  gateways:
  - ib-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ib-frontend-service
        port:
          number: 8080
